<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddTodo">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/AddTodoToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Add Todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_blue_dark"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingBottom="44dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TitleName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/save_reminder"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="@+id/AppBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppBarLayout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
        app:layout_constraintVertical_bias="0.19999999">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/remind_me"
            app:drawableLeftCompat="@drawable/ic_add_alarm"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text=""
            android:onClick="AddReminder"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/RemiderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/DatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/today" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0"
                android:text="@string/and" />

            <TextView
                android:id="@+id/TimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/time" />

        </LinearLayout>

        <TextView
            android:id="@+id/SetReminderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RemiderLayout"
            android:layout_alignStart="@id/RemiderLayout"
            android:layout_marginTop="80dp"
            android:text="@string/reminder_set_for_date_time"
            android:visibility="gone" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>